# lib

./: CMakeLists.txt  LICENSE  README.md  install.bat  install.sh  test.bat  test.sh
.github/workflows/: ci.yml
include/: kod.h  kod.hpp
include/kod/: chunk.h  closure.h  common.h  config.h  function.h  memory.h  range.h  stack.h  status.h  string.h  utils.h  value.h  vector.h
src/: chunk.c  closure.c  config.c  function.c  memory.c  range.c  stack.c  status.c  string.c  utils.c  utils.h  value.c
tests/: CMakeLists.txt  chunk_test.c  closure_test.c  config_test.c  function_test.c  memory_test.c  range_test.c  stack_test.c  status_test.c  string_test.c  utils_test.c  value_test.c  vector_test.c
